# robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  robot_drive.rviz  robot_rviz.rviz  robot_view.rviz  rtabmap_slam.rviz  static_test.rviz  twist_mux.yaml
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
dyn_description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro
launch/: joystick.launch.py  launch_sim.launch.py  rsp.launch.py  static_test.launch.py
maps/: cones_map_save.pgm  cones_map_save.yaml  cones_map_serial.data  my_house_map_save.pgm  my_house_map_save.yaml  my_house_map_serial.data  my_office_map_save.pgm  my_office_map_save.yaml
maps/my_office/: saved_map.yaml
simulation/docker/: build.bash  dockerfile  into.bash  run.bash  stop.bash
simulation/workspace/.gazebo/: gui.ini
simulation/workspace/src/graph_travel/src/: goal_pose_publisher.cpp  points.hpp
simulation/workspace/src/master_setup/: CMakeLists.txt  package.xml
simulation/workspace/src/master_setup/config/: master.rviz  nav2_params.yaml  slam_params.yaml
simulation/workspace/src/master_setup/launch/: master_bringup.launch.py  master_nav.launch.py  master_slam.launch.py  rviz.launch.py
simulation/workspace/src/robot/: CMakeLists.txt
simulation/workspace/src/tb2/: CMakeLists.txt  package.xml
worlds/: my_office.world  my_room.world  new_cones_world.world  static_test.world
(+15 files in other folders)
