<?xml version="1.0"?>
<package format="3">
  <name>master_setup</name>
  <version>1.0.0</version>
  <description>Pkg for launch explore</description>

  <maintainer email="ishevtsov0108@gmail.com">Ivan</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
